--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,5 +30,6 @@
         "editorBracketHighlight.foreground5": "#97c26c",
         "editorBracketHighlight.foreground6": "#abb2c0",
         "editorBracketHighlight.unexpectedBracket.foreground": "#de7842"
-    }
+    },
+    "gitdoc.enabled": false
 }
